--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="(https:\/\/|http:\/\/)(?:www.)?((?:(\d{1,3}.){3}\d{1,3})|(?:[\da-z][\da-z\-]{0,60}[\da-z].[a-z\.]+))(:\d{2,5})?([\da-z\/\-_]*#?)" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="(https:\/\/|http:\/\/)(?:www.)?((?:(\d{1,3}.){3}\d{1,3})|(?:[\da-zA-Z][\da-zA-Z\-]{0,60}[\da-zA-Z].[a-zA-Z\.]+))(:\d{2,5})?([\da-zA-Z\/\-_]*#?)" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
