--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][[А-Яа-яёЁ\-]{1,19}" placeholder="Имя" required/>
+                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][[а-яё\-]{1,19}" placeholder="Имя" required/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="[\w.-]+@[a-z]+.[a-z]+" placeholder="E-Mail" />
+                        <input class="form__input" type="email" name="name" pattern="[a-zA-Z][\w\.-]+@[a-z]+\.[a-z]+" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="(https:\/\/|http:\/\/)(?:www.)?((?:(\d{1,3}.){3}\d{1,3})|(?:[\da-zA-Z][\da-zA-Z\-]{0,60}[\da-zA-Z].[a-zA-Z\.]+))(:\d{2,5})?([\da-zA-Z\/\-_]*#?)" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="(https:\/\/|http:\/\/)(?:www.)?((?:(\d{1,3}.){3}\d{1,3})|(?:[\da-zA-Z][\da-zA-Z\-]{0,60}[\da-zA-Z].[a-zA-Z\.]+))(:\d{1,5})?([\da-zA-Z\/\-_]*#?)" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
